fixed scrollbars

--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -62,6 +62,18 @@ table {
 
 /*--------------------------- reset------------------------------------- */
 
+@layer utilities {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+    }
+  }
+
 .loader-wrapper {
 	display: flex;
 	flex-direction: column;
